<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <!-- Title -->
    <TextView
        android:id="@+id/central_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/goals_title"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/date_top_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- End-of-month info -->
    <TextView
        android:id="@+id/end_of_month_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/goals_valid_until_placeholder"
        android:layout_marginTop="@dimen/text_margin_small"
        app:layout_constraintTop_toBottomOf="@id/central_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="@dimen/form_side_margin"/>

    <!-- Scrollable list of goals -->
    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/end_of_month_text"
        app:layout_constraintBottom_toTopOf="@id/buttons_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="@dimen/content_padding">

        <LinearLayout
            android:id="@+id/goals_list_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"/>
    </ScrollView>

    <!-- Buttons area (we will show/hide / change text/color from code) -->
    <LinearLayout
        android:id="@+id/buttons_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="@dimen/fragment_padding"
        app:layout_constraintBottom_toTopOf="@id/bottom_nav_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/btn_primary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/set_goals"
            android:background="@drawable/bg_button_green"
            android:textColor="@color/white"/>

        <Space
            android:layout_width="@dimen/button_space"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_reset"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/reset_counters"
            android:background="@drawable/bg_button_red"
            android:textColor="@color/white"/>
    </LinearLayout>

    <!-- bottom nav -->
    <FrameLayout
        android:id="@+id/bottom_nav_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>